--- a/estilos.css
+++ b/estilos.css
@@ -6,12 +6,14 @@ body {
     margin-top: 2%;
     font-family: 'Be Vietnam', sans-serif;
 }
+
 /*Aquí le decimos al primer contenedor que use todo el ancho de la pantalla y en un 10% de su alto.*/
 #container {
     width: 100%;
     height: 10%;
-    padding-bottom: 10%;
+    padding-bottom: 7%;
 }
+
 /*Aquí le decimos cómo disponerse a los elementos de la lista*/
 ul {
     list-style-type: none;
@@ -26,6 +28,7 @@ ul {
     float: left;
     margin-left: 10%;
 }
+
 /*Aquí le decimos a cada elemento de texto que se formatee*/
 li a {
 
@@ -41,6 +44,7 @@ li a {
     color: black;
     transition-property: color;
 }
+
 /*Y agregamos una pequeña transición de color para cuando el mouse se ponga encima de una sección NO ACTIVA*/
 li a:hover:not(.active) {
     color: #F7B843;
@@ -66,35 +70,116 @@ li a:hover:not(.active) {
 .abajo:not(:first-of-type) {
     margin-left: 7%;
 }
-/*Centro las fotitos*/
+
+/*con el width ajustamos el ancho y le damos un poco de margen para que quede todo centrado. El display es la forma en que se distribuyen las imágenes y flex es una propiedad que las hace ser flexibles*/
 #portafolio {
+    width: 90%;
     margin-left: 10%;
-    margin-right: 10%;
+    display: flex;
+    flex-wrap: wrap;
+
+
 }
 
-/*Los cuatro siguiente estilos son para manejar el tamaño de las imágenes y que no se desordenen*/
-div.gallery img {
+/*Aquí ajustamos cantidad de columnas con el porcentaje*/
+.column {
+    flex: 25%;
+    max-width: 20%;
+    padding: 0 4px;
+}
+
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
     width: 100%;
-    height: auto;
+  }
+
+/*Es la "capa" que se pone por sobre todo cuando haces click a una imagen*/
+
+.modal {
+    z-index: 1;
+    display: none;
+    padding-top: 10px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.8)
+}
+/**aquí ajustas lo que va dentro de ese modal*/
+.modal-content {
+    margin: auto;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/*Estan son propiedades*/
+.modal-hover-opacity {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -webkit-backface-visibility: hidden;
+}
+
+.modal-hover-opacity:hover {
+    opacity: 0.60;
+    filter: alpha(opacity=60);
+    -webkit-backface-visibility: hidden;
 }
 
 
-* {
-    box-sizing: border-box;
-}
-
-.responsive {
-    padding: 0 6px;
-    float: left;
-    width: 24.99999%;
+.close {
+    text-decoration: none;
+    float: right;
+    font-size: 24px;
+    font-weight: bold;
+    color: white
 }
 
 
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
+
+
+.modal-content,
+#caption {
+
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
 }
+
+
+@-webkit-keyframes zoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+
+
+
+
+
+
 
 
 /*Aquí terminan los estilos del portafolio y empiezan los del about*/
@@ -102,25 +187,33 @@ div.gallery img {
 #contenedor {
     margin-top: 5%;
     float: left;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 18%;
+    margin-right: 8%;
     padding-bottom: 10%;
 }
 
 #izquierda {
     float: left;
     margin-left: 10%;
-    margin-top: 5%;
+    margin-top: 6.5%;
 }
 
 #derecha {
     float: left;
     width: 30%;
     margin-left: 5%;
+    margin-top: 0;
 }
+
 /*Los font-weight son para darle peso a la tipografía. En GoogleFonts sale el peso en número al lado de su correspondiente peso textual. Por ejemplo Extrabold 800*/
 h2 {
     font-weight: 800;
+}
+
+/*interlineado*/
+
+p {
+    line-height: 30px;
 }
 
 /*Aquí terminan los estilos del about y empiezan los del formulario*/
@@ -142,6 +235,7 @@ textarea {
     margin-bottom: 30px;
 
 }
+
 /*Al botón de enviar dale estas propiedades*/
 input[type=submit] {
     background-color: black;
@@ -152,12 +246,14 @@ input[type=submit] {
     width: 200px;
     height: 50px;
 }
+
 /*Cuando estés sobre el botón de enviar cambia el color con una transición*/
 input[type=submit]:hover {
     background-color: #F7B843;
     transition-property: background-color;
     transition-duration: 0.4s;
 }
+
 /*El color para cada título del formulario*/
 #nombre-c {
     color: #E75151;
