--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,4 @@
+/*Importamos la tipografía con el enlace que obtenemos desde https://fonts.google.com/?query=be&selection.family=Be+Vietnam:400,500,600,700,800*/
 @import url('https://fonts.googleapis.com/css?family=Be+Vietnam:400,500,600,700,800&display=swap');
 
 /*Los estilos de body son para acomodar el documento completo. Margin, es para que no genero un margen automático.*/
