--- a/estilos.css
+++ b/estilos.css
@@ -10,7 +10,7 @@ body {
 }
 
 /*Aquí le decimos al primer contenedor que use todo el ancho de la pantalla y en un 10% de su alto.*/
-#container {
+#navbar {
     width: 100%;
     height: 10%;
     padding-bottom: 7%;
@@ -187,7 +187,6 @@ li a:hover:not(.active) {
 /*Aquí terminan los estilos del portafolio y empiezan los del about*/
 /*Aquí contenemos dos contenedores. Uno para la imágen y otra para el texto.*/
 #contenedor {
-    margin-top: 5%;
     float: left;
     margin-left: 18%;
     margin-right: 8%;
@@ -226,7 +225,6 @@ p {
 /*Aquí terminan los estilos del about y empiezan los del formulario*/
 #containerDos {
     margin-left: 22%;
-    padding-top: 10%;
 }
 
 /*Aquí le decimos que el input es de tipo texto, y a los rectángulos, dale ciertas propiedades.*/
